<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expense Splitter</string>
    <string name="title_activity_menu">Main Menu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="item_view_user">Users</string>
    <string name="item_view_categ">Categories</string>
    <string name="item_view_exp">Expenses</string>
    <string name="item_gen_rep">Reports</string>
    <string name="item_settings">Settings</string>
    <string name="item_about">About Expense Splitter</string>
    <string name="menu_adduser">Add User</string>
    <string name="menu_addcateg">Add Category</string>
    <string name="menu_deluser">Delete User</string>
    <string name="menu_delcat">Delete Category</string>
    <string name="menu_delexp">Delete Expense</string>
	<string name="adduser_fname">First Name</string>
	<string name="adduser_lname">Last Name</string>
	<string name="adduser_email">Email</string>
	<string name="addcat_categname">Category Name</string>
	<string name="add_exp_item">Add Expense</string>
	<string name="confirm">Confirm</string>
	<string name="no_users">No Users</string>
	<string name="no_categ">No Category</string>
	<string name="no_expense">No Expenses</string>
	<string name="spent">spent</string>
	<string name="currency_text">NA</string>
	<string name="exp_categ">Expense Category</string>
	<string name="exp_user">Spent by</string>
	<string name="exp_date">Date</string>
	<string name="exp_date_dob">Pick Date</string>
	<string name="exp_amt">Amount</string>
	<string name="currency">Set Currency</string>
	<string name="button_done">Done</string>
	<string name="not_available_text">N/A</string>	
	<string name="total_expenditure">Total Expense</string>
	<string name="total_receivables">Total Receivables</string>
	<string name="text_on">on</string>
	
	<!-- Currency Strings -->
	<string name="indian_rupees">Rupees(Rs.)</string>
	<string name="us_dollars">Dollars($)</string>
	<string name="uk_pounds">Pounds(£)</string>
	<string name="euro">Euro(€)</string>
	<string name="arab_emirates_dirham">Arab Emirates Dirham(AED)</string>
</resources>
