<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TextView_Category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:text="@string/exp_categ"
        android:textSize="@dimen/help_text_size"
        android:textStyle="bold" >
    </TextView>

    <Spinner
        android:id="@+id/Spinner_Category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </Spinner>

    <TextView
        android:id="@+id/TextView_spentby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:text="@string/exp_user"
        android:textSize="@dimen/help_text_size"
        android:textStyle="bold" >
    </TextView>

    <Spinner
        android:id="@+id/Spinner_Spentby"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </Spinner>

    <TextView
        android:id="@+id/TextView_DOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:text="@string/exp_date"
        android:textSize="@dimen/help_text_size"
        android:textStyle="bold" >
    </TextView>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Button_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exp_date_dob" >
        </Button>

        <TextView
            android:id="@+id/TextView_Date_Info"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textSize="@dimen/help_text_size"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/TextView_Amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:text="@string/exp_amt"
        android:textSize="@dimen/help_text_size"
        android:textStyle="bold" >
    </TextView>

    <EditText
        android:id="@+id/EditText_Amount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="20"
        android:maxLines="1" >
    </EditText>

    <Button
        android:id="@+id/Button_Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:text="@string/button_done" >
    </Button>

</LinearLayout>