<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView_Firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adduser_fname"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/EditText_Firstname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:maxLines="1" >
            </EditText>

            <TextView
                android:id="@+id/TextView_Lastname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adduser_lname"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/EditText_Lastname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="20"
                android:maxLines="1" >
            </EditText>

            <TextView
                android:id="@+id/TextView_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adduser_email"
                android:textSize="@dimen/help_text_size"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/EditText_Email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" >
            </EditText>

            <Button
                android:id="@+id/Button_Confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm" >
            </Button>
        </LinearLayout>
    </ScrollView>

</LinearLayout>